# Orly

./: .dockerignore  .env.example  .gitignore  2026-03-16-interruption-errors.md  2026-03-16-the-next-round.md  AGENTS.md  Dockerfile  LICENSE  NEXT_ROUND_SPEC.md  PROJECT_PLAN.md  README.md  generate_calibration_mat.py  pyproject.toml
.specstory/: .project.json
backend/: agent.py  main.py  proactive.py  tools.py  tools_roadmap.py
calibration/: generate_mat.py  manual_calibrate.py  projector_calibrate.py  projector_verify.py
client/: animated_overlay.py  audio.py  audio_processor.py  camera.py  capture.py  code_generator.py  coordinate_transform.py  display.py  error_feedback.py  genai_utils.py  hand_detector.py  hardware.py  latency_overlay.py  latency_tracker.py  main.py  music_player.py  object_tracker.py  overlay_manager.py  overlay_state.py  paint_canvas.py  program_runtime.py  run_program.py  session_restore.py  session_store.py  video_generator.py  video_player.py  ws_client.py
docs/: 2026-03-16-NEXT.md  devpost_description.md  gemini-live-stability-audit.md  setup_guide.md
infra/: cloudbuild.yaml  deploy.sh
poc/: poc1_rectify.py  poc4_gemini_localize.py  poc5_function_calling.py  test_overlay_pipeline.py  test_projector_output.py
programs/: paint.py
simulation/: __init__.py  __main__.py  fake_audio.py  fake_camera.py  latency_benchmark.py  scenarios.py  sim_client.py
tests/: camera_helpers.py  test_advance_step.py  test_agent.py  test_animated_overlay.py  test_audio_processor.py  test_axis_convention.py  test_backend.py  test_camera_extended.py  (+67 more)
(+13 files in other folders)
