[project]
name = "tablelight"
version = "0.1.0"
description = "Projected AR tutoring system powered by Gemini Live API"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "fastapi",
    "uvicorn[standard]",
    "opencv-contrib-python",
    "numpy",
    "matplotlib",
    "pyaudio",
    "websockets",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
adk = [
    "google-adk",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["client*", "backend*", "simulation*"]

[tool.pytest.ini_options]

testpaths = ["tests"]
asyncio_mode = "auto"
